# aglet

./: .gitignore  AGENTS.md  Cargo.toml  PM.md  PROMPT.md  README.md  agenda.db  agenda.db-shm  agenda.db-wal  autoresearch.jsonl  cached-skipping-wilkes.md  decisions.md  feature-requests.ag  ideas.txt  issue-tracking.ag  plan-4d156d1e-multi-select.md  plan-per-section-filters.md  plan.md  prompt.md  prompts.md  questions.md  risks.md  session-2026-03-05.md  tasks.md  walkthrough.md
.beads/: beads.db  config.yaml  issues.jsonl  last-touched
archive/: plan-multi-column-entry.md  plan-per-section-filters.md  views-feature-summary.md  views.txt
crates/agenda-cli/: Cargo.toml
crates/agenda-cli/src/: main.rs
crates/agenda-core/: Cargo.toml
crates/agenda-core/src/: agenda.rs  classification.rs  date_rules.rs  dates.rs  engine.rs  error.rs  lib.rs  matcher.rs  model.rs  note_file.rs  query.rs  store.rs  workflow.rs
crates/agenda-core/src/store/: assignments.rs  categories.rs  items.rs  links.rs  mod.rs  tests.rs  views.rs
crates/agenda-tui/: Cargo.toml
crates/agenda-tui/src/: app.rs  async_classify.rs  error.rs  input_panel.rs  lib.rs  main.rs  projection.rs  tests.rs  text_buffer.rs  theme.rs  ui_support.rs  undo.rs
crates/agenda-tui/src/input/: mod.rs
crates/agenda-tui/src/modes/: board.rs  category.rs  classification.rs  global_settings.rs  mod.rs  suggestion_review.rs  view_edit.rs  view_edit2.rs
crates/agenda-tui/src/modes/view_edit/: details.rs  editor.rs  inline.rs  mod.rs  overlay.rs  picker.rs  sections.rs  state.rs
crates/agenda-tui/src/render/: mod.rs
crates/agenda-tui/src/state/: assign.rs  board.rs  category.rs  mod.rs  view_edit.rs
crates/aglet-cli/: Cargo.toml
crates/aglet-cli/src/: main.rs  main_tests.rs
crates/aglet-cli/tests/: add_show_edit.rs
crates/aglet-cli/tests/common/: fixtures.rs  mod.rs
crates/aglet-cli/tests/snapshots/: add_show_edit__add_with_note_when_and_category_persists__add_stdout.snap  add_show_edit__add_with_note_when_and_category_persists__show_stdout.snap  add_show_edit__add_with_numeric_value_persists.snap  add_show_edit__show_renders_provenance_for_subsumed_categories.snap
crates/aglet-core/: Cargo.toml
crates/aglet-core/src/: aglet.rs  aglet_tests.rs  classification.rs  date_rules.rs  dates.rs  engine.rs  error.rs  lib.rs  matcher.rs  model.rs  numeric_format.rs  query.rs  store.rs  store_tests.rs  workflow.rs  workspace.rs
crates/aglet-tui/: Cargo.toml
crates/aglet-tui/src/: app.rs  async_classify.rs  error.rs  fuzzy.rs  input_panel.rs  keymap.rs  lib.rs  projection.rs  tests.rs  ui_support.rs  undo.rs
crates/aglet-tui/src/input/: mod.rs
crates/aglet-tui/src/modes/: board.rs  category.rs  classification.rs  global_settings.rs  mod.rs  suggestion_review.rs
crates/aglet-tui/src/modes/view_edit/: details.rs  editor.rs  inline.rs  overlay.rs  picker.rs  sections.rs  state.rs
crates/aglet-tui/src/render/: mod.rs
crates/aglet-tui/src/state/: board.rs  category.rs  classification.rs  mod.rs
docs/: .gitignore  Makefile  README.md  aglet-cli.htm  aglet-cli.md  aglet-manual.htm  aglet-manual.md  aglet-tui.htm  aglet-tui.md  code-quality-plan.md  date-research.md  demo-literate-cli-demo-egfr-wikipedia.md  demo-literate-cli-demo-priority-and-assignment.md  demo-tui-walkthrough-complete-e2e.md  guide-cli-manpage.md  index.htm  index.md  ollama-model-comparison.md  open-project-items-by-priority.md  plan-category-direct-edit-ux-streamlining.md  plan-category-manager-full-rewrite.md  plan-linked-items.md  plan-next-phase-tui.md  plan-numeric-categories-and-columns.md  plan-openrouter-provider.md  plan-r36-view-manager-implementation.md  plan-ratatui-native-widgets.md  plan-standard-views-sections-columns-manager.md  plan-tui-ux-improvements-2026-03-18.md  plan-view-manager-tree-editor-ux-streamlining.md  plan-viewedit-redesign.md  process-prompt-bd-198-capture-parsed-datetime-confirmation.md  process-prompt-t021-retroactive-assignment.md  process-prompt-t022-wire-engine.md  process-prompt-t026-show-children-expansion.md  process-prompt-t027-edit-through.md  process-prompt-t031-basic-date-parser-time-and-compound.md  process-specify-on-ready-request-prompt.md  process-specify-on-ready.md  test-script-scenario-02-investigative-journalism.md  (+5 more)
(+202 files in other folders)
