[package]
name = "agenda-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
agenda-core = { path = "../agenda-core" }
agenda-tui = { path = "../agenda-tui" }
clap = { version = "4", features = ["derive", "env"] }
jiff = "0.2"
uuid = "1.11"
rust_decimal = "1.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
