[package]
name = "aglet-cli"
version = "0.1.0"
edition = "2021"
autobins = false
license = "GPL-3.0-or-later"

[[bin]]
name = "aglet"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
aglet-core = { path = "../aglet-core" }
aglet-tui = { path = "../aglet-tui" }
clap = { version = "4", features = ["derive", "env"] }
jiff = "0.2"
uuid = "1.11"
rust_decimal = "1.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["filters"] }
tempfile = "3"
