[package]
name = "aglet-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.36", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
