[package]
name = "aglet-tui"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
crossterm = "0.29"
aglet-core = { path = "../aglet-core" }
jiff = "0.2"
nucleo = "0.5"
tui_textarea = { package = "tui-textarea-2", version = "0.10.2", default-features = false, features = ["crossterm"] }
rust_decimal = "1"
shlex = "1"
tempfile = "3"
uuid = "1"
